--- a/UniDash/angular/src/app/main/menu/list-menu/list-menu.component.html
+++ b/UniDash/angular/src/app/main/menu/list-menu/list-menu.component.html
@@ -6,7 +6,7 @@
           <li><a><i class="fas fa-home" style="font-size: 18px"></i><span class="ml-3">Головна</span> </a></li>
           <li><a><i class="far fa-edit"  style="font-size: 18px"></i><span class="ml-3">Абітурієнти</span><span class="fa fa-chevron-down fanew"></span></a>
               <ul class="nav child_menu">
-                  <li routerLinkActive="current-page"><a routerLink="applicants/">Таблиця</a></li>
+                  <li routerLinkActive="current-page" [routerLinkActiveOptions]="{exact:true}"><a routerLink="applicants/" >Таблиця</a></li>
                   <li routerLinkActive="current-page"><a routerLink="applicants/edit">Редагування</a></li>
                   <li routerLinkActive="current-page"><a href="form_advanced.html">Статистика</a></li>
               </ul>
