--- a/UniDash/angular/src/app/main/menu/left-menu.component.html
+++ b/UniDash/angular/src/app/main/menu/left-menu.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="profile_info">
           <span>Ласкаво просимо,</span>
-          <h2>Roman Kolesnyk</h2>
+          <h2>{{userName}}</h2>
       </div>
       <div class="clearfix"></div>
     </div>
