--- a/UniDash/angular/src/app/login/login.component.html
+++ b/UniDash/angular/src/app/login/login.component.html
@@ -1,20 +1,21 @@
+<simple-notifications></simple-notifications> 
 <div style="padding-top: 50px;">
   <p class="tip">UniDash - University Dashboard</p>
   <div [ngClass]="{'cont': true, 's--signup' : toogleSignUp}">
-    <div class="form sign-in">
+    <form [formGroup]="loginForm" class="form sign-in">
       <h2>Ласкаво просимо,</h2>
       <label>
-        <span>Email</span>
-        <input type="email" />
+        <span>Login</span>
+        <input type="text" formControlName="userName"/>
       </label>
       <label>
         <span>Пароль</span>
-        <input type="password" />
+        <input type="password" formControlName="password"/>
       </label>
       <p class="forgot-pass">Не пам'ятаєте паролю?</p>
-      <button type="button" class="submit">Увійти</button>
+      <button type="button" class="submit" (click)="login()">Увійти</button>
       <button type="button" class="fb-btn">Увійти через <span>facebook</span>(скоро)</button>
-    </div>
+    </form>
     <div class="sub-cont">
       <div class="img">
         <div class="img__text m--up">
@@ -30,23 +31,27 @@
           <span class="m--in">Увійти</span>
         </div>
       </div>
-      <div class="form sign-up">
-        <h2>Час відчувати себе як вдома,</h2>
+      <form [formGroup]="regForm" class="form sign-up">
+        <h2>Час відчути себе як вдома,</h2>
+        <label>
+          <span>ФІО</span>
+          <input type="text" formControlName="fullName"/>
+        </label>
         <label>
           <span>Логін</span>
-          <input type="text" />
+          <input type="text"  formControlName="userName"/>
         </label>
         <label>
           <span>Email</span>
-          <input type="email" />
+          <input type="email"  formControlName="email"/>
         </label>
         <label>
           <span>Пароль</span>
-          <input type="password" />
+          <input type="password"  formControlName="password"/>
         </label>
-        <button type="button" class="submit">Зареєструйтеся</button>
+        <button type="button" class="submit" (click)="register()">Зареєструйтеся</button>
         <button type="button" class="fb-btn">Приєднатися через <span>facebook</span>(скоро)</button>
-      </div>
+      </form>
     </div>
   </div>
 </div> 
